; ModuleID = '/home/carl/AnghaBench/sway/sway/extr_criteria.c_pattern_create.c'
source_filename = "/home/carl/AnghaBench/sway/sway/extr_criteria.c_pattern_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pattern = type { i32, i32 }

@SWAY_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Failed to allocate pattern\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"__focused__\00", align 1
@PATTERN_FOCUSED = common dso_local global i32 0, align 4
@PATTERN_PCRE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pattern**, i8*)* @pattern_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pattern_create(%struct.pattern** %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pattern**, align 8
  %5 = alloca i8*, align 8
  store %struct.pattern** %0, %struct.pattern*** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = call %struct.pattern* @calloc(i32 1, i32 8)
  %7 = load %struct.pattern**, %struct.pattern*** %4, align 8
  store %struct.pattern* %6, %struct.pattern** %7, align 8
  %8 = load %struct.pattern**, %struct.pattern*** %4, align 8
  %9 = load %struct.pattern*, %struct.pattern** %8, align 8
  %10 = icmp ne %struct.pattern* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @SWAY_ERROR, align 4
  %13 = call i32 @sway_log(i32 %12, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i8*, i8** %5, align 8
  %16 = call i64 @strcmp(i8* %15, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %14
  %19 = load i32, i32* @PATTERN_FOCUSED, align 4
  %20 = load %struct.pattern**, %struct.pattern*** %4, align 8
  %21 = load %struct.pattern*, %struct.pattern** %20, align 8
  %22 = getelementptr inbounds %struct.pattern, %struct.pattern* %21, i32 0, i32 1
  store i32 %19, i32* %22, align 4
  br label %36

23:                                               ; preds = %14
  %24 = load i32, i32* @PATTERN_PCRE, align 4
  %25 = load %struct.pattern**, %struct.pattern*** %4, align 8
  %26 = load %struct.pattern*, %struct.pattern** %25, align 8
  %27 = getelementptr inbounds %struct.pattern, %struct.pattern* %26, i32 0, i32 1
  store i32 %24, i32* %27, align 4
  %28 = load %struct.pattern**, %struct.pattern*** %4, align 8
  %29 = load %struct.pattern*, %struct.pattern** %28, align 8
  %30 = getelementptr inbounds %struct.pattern, %struct.pattern* %29, i32 0, i32 0
  %31 = load i8*, i8** %5, align 8
  %32 = call i32 @generate_regex(i32* %30, i8* %31)
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %35, label %34

34:                                               ; preds = %23
  store i32 0, i32* %3, align 4
  br label %37

35:                                               ; preds = %23
  br label %36

36:                                               ; preds = %35, %18
  store i32 1, i32* %3, align 4
  br label %37

37:                                               ; preds = %36, %34
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local %struct.pattern* @calloc(i32, i32) #1

declare dso_local i32 @sway_log(i32, i8*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @generate_regex(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
